# fnvvr

./: .gitignore  CMakeLists.txt  README.md
docs/: 6dof-coordinate-proof.md  architecture-v2.md  current-retail-openmw-handoff-status.md  experiment-brief.md  next-steps.md  openmwvr-reuse-map.md  prop-layer-plan.md  source-snapshot.md  status.md
host/: fnvxr_gpu_color_consumer.cpp  fnvxr_gpu_color_consumer.h  fnvxr_gpu_color_route.h  fnvxr_openxr_live_authority.h  fnvxr_openxr_pose_host.cpp  fnvxr_openxr_probe.cpp  fnvxr_stereo_visual_trial.h
output/3d/: PRINTING_AND_MEASUREMENT.txt  fixture_manifest.json  fnvxr_6dof_base.stl  fnvxr_6dof_ipd_comb.stl  fnvxr_6dof_mast.stl  fnvxr_6dof_rotation_pitch.stl  fnvxr_6dof_rotation_roll.stl  fnvxr_6dof_rotation_yaw.stl
output/proof/: fnvxr_6dof_numeric_proof.json  offline_gate_results.json  oracle_reviews.json
plugin/: fnvxr_fabrik.h  fnvxr_nvse_plugin.cpp
protocol/: fnvxr_gpu_color_transport.h  fnvxr_gpu_frame_transport.h  fnvxr_product_contract.h  fnvxr_protocol.h  fnvxr_shared_state.h
renderhook/: fnvxr_d3d9_activation.h  fnvxr_d3d9_eye_targets.h  fnvxr_d3d9_proxy.cpp  fnvxr_d3d9_proxy.def  fnvxr_d3d9ex_color_transport_win32.cpp  fnvxr_d3d9ex_color_transport_win32.h  fnvxr_d3d9ex_game_creation.h  fnvxr_dinput8_proxy.cpp  fnvxr_dinput8_proxy.def  fnvxr_gpu_color_producer.h  fnvxr_gpu_color_publisher_win32.cpp  fnvxr_gpu_color_publisher_win32.h  fnvxr_input_proxy_safety.h  fnvxr_retail_ui_quad_capture.h  fnvxr_retail_ui_quad_capture_win32.cpp  fnvxr_retail_ui_quad_capture_win32.h  fnvxr_retail_vr_bridge_win32.h  fnvxr_stereo_math.h  fnvxr_xinput_proxy.cpp  fnvxr_xinput_proxy.def
runtime/: fnvxr_center_renderer_backend.h  fnvxr_engine_capability.h  fnvxr_engine_stereo_resources.h  fnvxr_engine_stereo_schedule.h  fnvxr_module_inventory_acceptance.h  fnvxr_private_geometry_collector.h  fnvxr_retail_abi_revalidator.cpp  fnvxr_retail_abi_revalidator.h  fnvxr_retail_center_renderer_operations.h  fnvxr_retail_center_runtime.h  fnvxr_retail_compatibility_proof.cpp  fnvxr_retail_compatibility_proof.h  fnvxr_retail_engine_abi.h  fnvxr_retail_engine_calls.h  fnvxr_retail_engine_manifest.h  fnvxr_retail_engine_resource_adapter.h  fnvxr_retail_eye_camera_transaction.h  fnvxr_retail_renderer_contract.h  fnvxr_retail_runtime_authority.cpp  fnvxr_retail_runtime_authority.h  fnvxr_retail_runtime_binding.h  fnvxr_retail_safety.h  fnvxr_retail_tracked_frame.h  fnvxr_retail_tracked_frame_win32.cpp  fnvxr_retail_tracked_frame_win32.h  fnvxr_retail_world_controller.h  fnvxr_retail_world_hook_contract.h  fnvxr_retail_world_hook_lease.h  fnvxr_retail_world_hook_win32.cpp  fnvxr_retail_world_hook_win32.h  fnvxr_stereo_transaction.h
scripts/: analyze-fnvxr-live-run.ps1  audit-launch-safety.ps1  build-fnvxr-product.ps1  build-scene-cache.ps1  build-win32.ps1  capture-scene-cache.ps1  fetch-deps.ps1  fnvxr-product-common.ps1  fnvxr-sidecar-common.ps1  get-verified-shader-wvp-contracts.ps1  harvest-openmw-native-scenes.ps1  import-openmw-ppm-scene-cache.ps1  preflight-fnvxr.ps1  probe-local-fnv.ps1  probe-retail-video-frame.ps1  probe-shared-state.ps1  request-plugin-save-quit.ps1  run-openxr-pose-host.ps1  run-openxr-probe.ps1  stage-plugin.ps1  start-cache-only-scene.ps1  start-fnvxr-product.ps1  start-openmw-fnv-sidecar.ps1  start-openxr-retail-sidecar.ps1  start-retail-pcvr-max.ps1  start-retail-surface-producer.ps1  start-rock-solid.ps1  verify-fnvxr-proof.ps1  verify-openmw-fnvxr-bridge-source.ps1  verify-retail-pcvr-max-setup.ps1  watch-host.ps1  watch-openmw-left-grip-launch-retail.ps1  watch-retail-exit.ps1
tests/: assert_d3d9_proxy_inert_fuse.cmake  assert_deterministic_win32_artifacts.cmake  assert_input_proxy_inert_fuse.cmake  assert_launcher_live_fuse.cmake  assert_openxr_host_fuse.cmake  assert_openxr_probe_fuse.cmake  assert_retail_input_weapon_inert_fuse.cmake  assert_retail_ui_quad_capture_source_fuse.cmake  assert_stereo_resource_authority_fuse.cmake  fnvxr_build_attestation_test.ps1  fnvxr_center_renderer_backend_test.cpp  fnvxr_d3d11_fence_only_nt_handle_test.cpp  fnvxr_d3d9_activation_test.cpp  fnvxr_d3d9_eye_targets_test.cpp  fnvxr_d3d9_forwarding_test.cpp  fnvxr_d3d9ex_game_creation_test.cpp  fnvxr_engine_capability_test.cpp  fnvxr_engine_stereo_resources_inert_test.cpp  fnvxr_engine_stereo_resources_test.cpp  fnvxr_engine_stereo_schedule_test.cpp  fnvxr_fabrik_test.cpp  fnvxr_gpu_color_consumer_test.cpp  fnvxr_gpu_color_producer_test.cpp  fnvxr_gpu_color_publisher_win32_test.cpp  fnvxr_gpu_color_route_test.cpp  fnvxr_gpu_color_transport_test.cpp  fnvxr_gpu_transport_test.cpp  fnvxr_input_proxy_safety_test.cpp  fnvxr_jip_normalization_test.cpp  fnvxr_mapped_image_proof_test.cpp  fnvxr_module_inventory_acceptance_test.cpp  fnvxr_nvse_bridge_test.cpp  fnvxr_openxr_live_authority_test.cpp  fnvxr_player_transform_test.cpp  fnvxr_plugin_exports_test.cpp  fnvxr_private_geometry_collector_test.cpp  fnvxr_probe_module_lookup_test.cpp  fnvxr_product_contract_test.cpp  fnvxr_product_launcher_test.ps1  fnvxr_protocol_layout_test.cpp  (+26 more)
tools/: fnvxr_command.cpp  fnvxr_input.cpp  fnvxr_jip_normalization.h  fnvxr_mapped_image_proof.h  fnvxr_pose_fixture.cpp  fnvxr_probe_module_lookup.h  fnvxr_retail_abi_map.h  fnvxr_retail_runtime_probe.cpp  fnvxr_shared_state_probe.cpp  fnvxr_showoff_compatibility.h  fnvxr_windows_module_census.h  generate_6dof_proof_artifacts.py  render_shield_preview.py
